--- a/template.Rnw
+++ b/template.Rnw
@@ -105,15 +105,70 @@ The equality holds for any $x$.
 
 Note, I did a page break here so that the next section started on a clean page.
 \newpage
-\subsection{Results Subsection}
-Subsections can be helpful for the Results section, too. This can be particularly helpful if you have different questions to answer. 
+\subsection{Running R Code}
+Code chunks can be entered into Sweave; e.g., here are some comments.
+<<size='scriptsize'>>=
+# R code goes here
+# Output is automatically printed in the pdf
+@
+Below, you can see that we can do algebra with R.
+<<size='scriptsize'>>=
+8*(9-5) + 9    # 8(x-5) + x for x=9
+@
+Below, we show we can produce the code without evaluating it.
+<<eval=FALSE, size='scriptsize'>>=
+8*(9-5) + 9  # 8(x-5) + x for x=9
+@
+Alternatively, we can produce the output without the code.
+<<echo=FALSE, size='scriptsize'>>=
+8*(9-5) + 9  # 8(x-5) + x for x=9
+@
+We can also call object values from R directly.
+<<size='scriptsize'>>=
+result <- 8*(9-5) + 9  # 8(x-5) + x for x=9
+result.with.error <- result + rnorm(1, mean = 0, sd = 0.1) 
+result.with.error
+@
+The result is \Sexpr{result.with.error}. Note that I did not type the result, but I used the \verb|\Sexpr{} command|.
+\subsection{Plotting}
+We can also plot with R.
+<<plot1, eval=FALSE, size='scriptsize'>>=
+#Plot a histogram of random exponential data
+hist(rexp(100))
+@
+\begin{figure}[H]
+\begin{center}
+%This code is evaluated, but not printed
+%warning=FALSE and message=FALSE ensure no text is returned as a by product of
+%printing; this would cause an error in that plot+text is returned instead of
+%just the plot
+<<echo=FALSE, warning=FALSE, message=FALSE, fig.dim=c(5,3.5)>>=
+<<plot1>>
+@
+\caption{A histogram of random exponentially distributed data, $n=100$.}
+\label{plot1} %we can now reference plot1
+\end{center}
+\end{figure}
+\subsection{Tables}
+Below, we load and take a peek at some data about the death rates per 1000 in Virginia in 1940 (Molyneaux et al., 1947).
+<<size='scriptsize'>>=
+data(VADeaths)
+head(VADeaths) # Take a peek of the data
+@
 
-
-\section{Discussion}
- You should objectively evaluate the evidence you found in the data. Do not embellish or wish-terpet (my made-up phase for making an interpretation you, or the researcher, wants to be true without the data \emph{actually} supporting it). Connect your findings to the existing information you provided in the Introduction.
-
-Finally, provide some concluding remarks that tie together the entire paper. Think of the last part of the results as abstract-like. Tell the reader what they just consumed -- what's the takeaway message?
-
+If we want to print this nicely, we can do so using the xtable package (Dahl et al., 2019), which we can reference using the label (Table \href{VADeaths.tab} 1). 
+<<size='scriptsize'>>=
+library(xtable)
+sleep.table<-xtable(VADeaths ,
+                    label = "VADeaths.tab",
+                    caption = "Death Rates per 1000 in Virginia (1940).")
+@
+<<echo=FALSE, results="asis">>=
+# placement="H" places table [H]ere, just like plot
+# include.rownames=FALSE doesn’t print the row numbers in this example
+print(sleep.table,
+table.placement = "H", include.rownames=FALSE, size = "small")
+@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Bibliography
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
