--- a/template.tex
+++ b/template.tex
@@ -156,14 +156,131 @@ The equality holds for any $x$.
 
 Note, I did a page break here so that the next section started on a clean page.
 \newpage
-\subsection{Results Subsection}
-Subsections can be helpful for the Results section, too. This can be particularly helpful if you have different questions to answer. 
+\subsection{Running R Code}
+Code chunks can be entered into Sweave; e.g., here are some comments.
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{# R code goes here}
+\hlcom{# Output is automatically printed in the pdf}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+Below, you can see that we can do algebra with R.
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlnum{8}\hlopt{*}\hldef{(}\hlnum{9}\hlopt{-}\hlnum{5}\hldef{)} \hlopt{+} \hlnum{9}    \hlcom{# 8(x-5) + x for x=9}
+\end{alltt}
+\begin{verbatim}
+## [1] 41
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+Below, we show we can produce the code without evaluating it.
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlnum{8}\hlopt{*}\hldef{(}\hlnum{9}\hlopt{-}\hlnum{5}\hldef{)} \hlopt{+} \hlnum{9}  \hlcom{# 8(x-5) + x for x=9}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+Alternatively, we can produce the output without the code.
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+## [1] 41
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+We can also call object values from R directly.
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hldef{result} \hlkwb{<-} \hlnum{8}\hlopt{*}\hldef{(}\hlnum{9}\hlopt{-}\hlnum{5}\hldef{)} \hlopt{+} \hlnum{9}  \hlcom{# 8(x-5) + x for x=9}
+\hldef{result.with.error} \hlkwb{<-} \hldef{result} \hlopt{+} \hlkwd{rnorm}\hldef{(}\hlnum{1}\hldef{,} \hlkwc{mean} \hldef{=} \hlnum{0}\hldef{,} \hlkwc{sd} \hldef{=} \hlnum{0.1}\hldef{)}
+\hldef{result.with.error}
+\end{alltt}
+\begin{verbatim}
+## [1] 41.01679
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
+The result is 41.0167874. Note that I did not type the result, but I used the \verb|\Sexpr{} command|.
+\subsection{Plotting}
+We can also plot with R.
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlcom{#Plot a histogram of random exponential data}
+\hlkwd{hist}\hldef{(}\hlkwd{rexp}\hldef{(}\hlnum{100}\hldef{))}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+\begin{figure}[H]
+\begin{center}
+%This code is evaluated, but not printed
+%warning=FALSE and message=FALSE ensure no text is returned as a by product of
+%printing; this would cause an error in that plot+text is returned instead of
+%just the plot
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-6-1} 
+\end{knitrout}
+\caption{A histogram of random exponentially distributed data, $n=100$.}
+\label{plot1} %we can now reference plot1
+\end{center}
+\end{figure}
+\subsection{Tables}
+Below, we load and take a peek at some data about the death rates per 1000 in Virginia in 1940 (Molyneaux et al., 1947).
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{data}\hldef{(VADeaths)}
+\hlkwd{head}\hldef{(VADeaths)} \hlcom{# Take a peek of the data}
+\end{alltt}
+\begin{verbatim}
+##       Rural Male Rural Female Urban Male Urban Female
+## 50-54       11.7          8.7       15.4          8.4
+## 55-59       18.1         11.7       24.3         13.6
+## 60-64       26.9         20.3       37.0         19.3
+## 65-69       41.0         30.9       54.6         35.1
+## 70-74       66.0         54.3       71.1         50.0
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
 
-
-\section{Discussion}
- You should objectively evaluate the evidence you found in the data. Do not embellish or wish-terpet (my made-up phase for making an interpretation you, or the researcher, wants to be true without the data \emph{actually} supporting it). Connect your findings to the existing information you provided in the Introduction.
-
-Finally, provide some concluding remarks that tie together the entire paper. Think of the last part of the results as abstract-like. Tell the reader what they just consumed -- what's the takeaway message?
+If we want to print this nicely, we can do so using the xtable package (Dahl et al., 2019), which we can reference using the label (Table \href{VADeaths.tab} 1). 
+\begin{knitrout}\scriptsize
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{alltt}
+\hlkwd{library}\hldef{(xtable)}
+\hldef{sleep.table}\hlkwb{<-}\hlkwd{xtable}\hldef{(VADeaths ,}
+                    \hlkwc{label} \hldef{=} \hlsng{"VADeaths.tab"}\hldef{,}
+                    \hlkwc{caption} \hldef{=} \hlsng{"Death Rates per 1000 in Virginia (1940)."}\hldef{)}
+\end{alltt}
+\end{kframe}
+\end{knitrout}
+% latex table generated in R 4.4.2 by xtable 1.8-4 package
+% Tue Jan 21 15:20:22 2025
+\begin{table}[H]
+\centering
+\begingroup\small
+\begin{tabular}{rrrr}
+  \hline
+Rural Male & Rural Female & Urban Male & Urban Female \\ 
+  \hline
+11.70 & 8.70 & 15.40 & 8.40 \\ 
+  18.10 & 11.70 & 24.30 & 13.60 \\ 
+  26.90 & 20.30 & 37.00 & 19.30 \\ 
+  41.00 & 30.90 & 54.60 & 35.10 \\ 
+  66.00 & 54.30 & 71.10 & 50.00 \\ 
+   \hline
+\end{tabular}
+\endgroup
+\caption{Death Rates per 1000 in Virginia (1940).} 
+\label{VADeaths.tab}
+\end{table}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Bibliography
