--- a/bib.bib
+++ b/bib.bib
@@ -108,3 +108,28 @@ eprint = {
     note = {R package version 1.8-4},
     url = {https://CRAN.R-project.org/package=xtable},
   }
+  
+@Manual{Horst2020,
+    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
+    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
+    year = {2020},
+    note = {R package version 0.1.0},
+    doi = {10.5281/zenodo.3960218},
+    url = {https://allisonhorst.github.io/palmerpenguins/},
+  }
+  
+@article{9abfb448-e032-3b5b-972c-40954bc7e23c,
+ ISSN = {00031224, 19398271},
+ URL = {http://www.jstor.org/stable/2086734},
+ author = {Lambert Molyneaux and Sara K. Gilliam and L. Florant},
+ journal = {American Sociological Review},
+ number = {5},
+ pages = {525--535},
+ publisher = {American Sociological Association, Sage Publications, Inc.},
+ title = {Differences in Virginia Death Rates by Color, Sex, Age and Rural or Urban Residence},
+ urldate = {2025-01-25},
+ volume = {12},
+ year = {1947}
+}
+
+  
