--- a/template.tex
+++ b/template.tex
@@ -97,7 +97,6 @@ This document provides a basic template for the 2-page labs we will complete eac
 
 \section{Introduction}
 For this lab you will
-\\
 \begin{enumerate}[1.]\itemsep0em
 \item Install \href{https://cran.rstudio.com/} R and \href{https://posit.co/download/rstudio-desktop/} {RStudio}
 \item Install tinytex (if necessary):
@@ -116,6 +115,7 @@ For this lab you will
 \subsection{Bold, Italics, and Underlining}
 We can \textbf{bold}, \textit{italicize}, \underline{underline}, and \emph{emphasize} text in Sweave.\\
 \indent{Note, I did a column break here so that the list wasn’t broken across columns.}
+\columnbreak
 \subsection{Lists, and Numbered Lists}
 We can write an unordered list in Sweave.
 \begin{itemize}\itemsep0em
@@ -202,11 +202,11 @@ We can also call object values from R directly.
 \hldef{result.with.error}
 \end{alltt}
 \begin{verbatim}
-## [1] 41.09566
+## [1] 41.04298
 \end{verbatim}
 \end{kframe}
 \end{knitrout}
-The result is 41.0956623. Note that I did not type the result, but I used the \verb|\Sexpr{} command|.
+The result is 41.0429804. Note that I did not type the result, but I used the \verb|\Sexpr{} command|.
 \subsection{Plotting}
 We can also plot with R.
 \begin{knitrout}\scriptsize
@@ -262,7 +262,7 @@ If we want to print this nicely, we can do so using the xtable package \citep{xt
 \end{kframe}
 \end{knitrout}
 % latex table generated in R 4.4.2 by xtable 1.8-4 package
-% Sat Jan 25 17:29:06 2025
+% Sat Jan 25 17:42:19 2025
 \begin{table}[H]
 \centering
 \begingroup\small
